Fixed some more